# open-filmly

./: .gitignore  .npmrc  CLAUDE.md  README.md  README.zh-CN.md  analysis_options.yaml  cloudflare-workers-api.js  index.html  next.config.mjs  package.json  pnpm-lock.yaml  preload.js  pubspec.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
app/: README.md  globals.css  layout.tsx  page.tsx  pubspec.yaml
components/: config-form.tsx  loading-grid.tsx  local-network-info.tsx  local-network-setup.tsx  media-card.tsx  media-grid.tsx
docs/: HANDOFF_CODEX.md  design-media-command-center.md  ideas.md  media-agent-competitor-brief.md  plan-category-nav-and-wip.md  plan-media-command-center.md  plan-personal-media-os-next.md
electron/: IPC_ARCHITECTURE.md  auto-scan-manager.ts  enhanced-metadata-scraper.ts  enhanced-tmdb-client.ts  file-parser.ts  go-smb-client.ts  hash-service.ts  intelligent-name-recognizer.ts  ipc-channels.ts  ipc-client.ts  ipc-handler.ts  ipc-handlers.ts  main.ts  media-database.ts  media-player-client.ts  media-player.ts  media-proxy-server.ts  media-scanner.ts  metadata-scraper.ts  mpv-player-client.ts  network-storage-client.ts  poster-scraper.ts  preload.ts  provider-factory.ts  samba-client.ts  server.ts  simple-mpv-client.ts  smb-client.ts  task-queue-manager.ts  tsconfig.json
lib/: app.dart  local-network-bridge.ts  main.dart  poster-scraper.ts  samba-client.ts
macos/: Podfile
scripts/: make_dmg.sh
src/: App.tsx  globals.css
test/: agent_live_ui_test.dart  (+59 more)
tools/smb-discover-rs/: Cargo.toml
(+267 files in other folders)
