[package]
name = "smb-discover"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "smb-discover"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"

# SMB/CIFS 相关
# 注意：这里我们先用一个基本的网络探测库，如果找不到好的SMB库就用系统命令
reqwest = { version = "0.11", features = ["json"] }
tokio-util = { version = "0.7", features = ["net"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true